<resources>

    <string name="app_name">Location Chat</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">639333126492264</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb639333126492264</string>

    <string name="msg_welcome">Welcome. Again!</string>
    <string name="msg_successfully_signed_in">Successfully signed in ^_^</string>
    <string name="msg_auth_necessary">Authentication is necessary.</string>
    <string name="action_leave_app">Leave app</string>
    <string name="action_authenticate">Authenticate!</string>
    <string name="action_upload_an_image">Upload an Image</string>

    <string name="msg_permissions_granted">Permissions granted</string>
    <string name="title_permission_required">Permission required</string>
    <string name="msg_permission_required">Permission is required for this application to work!</string>
    <string name="title_permission_disabled">Permission Disabled</string>
    <string name="msg_please_enable_permission">
        <![CDATA[Enable the permission in Settings]]></string>
    <string name="msg_we_cant_give_functionality">Can\'t give you this functionality, we sorry</string>

    <string name="title_feature_permission">This isn\'t necessary permission</string>
    <string name="msg_feature_permission">You can not to allow it, but then you will have bounded functionality</string>

    <string name="action_allow">Allow</string>
    <string name="action_cancel">Cancel</string>

    <string name="action_go_to_settings">Go to settings</string>
    <string name="nav_drawer_open">Open drawer</string>
    <string name="nav_drawer_close">Close drawer</string>
    <string name="action_settings">Settings</string>

    <string name="title_menu_create_chat">Create chat</string>
    <string name="msg_your_chat_title">Title of your chat</string>
    <string name="msg_your_chat_radius">Radius of your chat, km</string>
    <string name="content_description_image_preview">Image preview</string>
    <string name="msg_choose_a_photo_for_chat">Choose a photo for chat</string>
    <string name="msg_upload_your_chat">Upload your chat</string>
    <string name="title_menu_go_to_test_chat">Go to test chat (This should be deleted!)</string>
    <string name="error_fetching_chats">Something went wrong while we were fetching chats.</string>
    <string name="action_refresh">Refresh</string>
    <string name="edit_enter_your_username">Enter your username</string>
    <string name="btn_sign_up">Sign up</string>
    <string name="text_registration">Registration</string>
    <string name="err_username_cant_be_blank">Username can\'t be blank!</string>
    <string name="et_login_hint_username">Enter your username</string>
    <string name="et_login_hint_password">Enter your password</string>
    <string name="tv_title_sign_in">Sign in</string>
    <string name="tv_title_or_sign_up">or sign up</string>
    <string name="btn_sign_in">Sign in</string>

</resources>

