<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_registration"
        android:layout_marginTop="5dp"
        android:textSize="24dp"/>

    <EditText
        android:id="@+id/et_signup_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_enter_your_username"/>

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/btn_sign_up"/>

</LinearLayout>