<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.danjorn.views.com.danjorn.activities.CreateChatActivity">

    <com.danjorn.views.custom.OneLineInputLayout
        android:id="@+id/edit_chat_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg_your_chat_title"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/max_chat_title_length"
        app:errorEnabled="true"
        app:hintAnimationEnabled="true" />


    <com.danjorn.views.custom.OneLineInputLayout
        android:id="@+id/edit_chat_radius"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/msg_your_chat_radius"
        app:counterEnabled="true"
        app:counterMaxLength="@integer/max_chat_radius_digits"
        app:errorEnabled="true"
        android:inputType="number"
        app:hintAnimationEnabled="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:padding="5dp"
            android:contentDescription="@string/content_description_image_preview"
            android:src="@drawable/bang" />

        <Button
            android:id="@+id/btn_choose_chat_image"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="70"
            android:padding="5dp"
            android:text="@string/msg_choose_a_photo_for_chat"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_upload_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/msg_upload_your_chat"/>


</LinearLayout>
